Fix carousel stretching on Safari

--- a/hello-world/src/components/carousel.css
+++ b/hello-world/src/components/carousel.css
@@ -1,6 +1,6 @@
 /* Fix the height */
 .slick-slide img {
-  max-height: 25vh;
+  /* max-height: 25vh; */
 }
 .slick-slide > div { height: 100%; }
 
